--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
       <div class="box box1"></div>
       <div class="box box2"></div>
     </div>
-    
+
     <div class="bot-row row">
       <div class="box box3"></div>
       <div class="box box4"></div>
     </div>
-  
+
 	<div class="button-row row">
+    <div class="spacer"></div>
 	  <div class="button start">START</div>
 	  <div class="button reset">RESET</div>
+    <div class="spacer"></div>
 	</div>
-	
+
   </div>
 
   <script src="js/index.js"></script>
