--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   <div class="container">
 
     <div class="top-row row">
-      <div class="box box1"></div>
-      <div class="box box2"></div>
+      <div class="box" id="box1"></div>
+      <div class="box" id="box2"></div>
     </div>
 
     <div class="bot-row row">
-      <div class="box box3"></div>
-      <div class="box box4"></div>
+      <div class="box" id="box3"></div>
+      <div class="box" id="box4"></div>
     </div>
 
 	<div class="button-row row">
     <div class="spacer"></div>
-	  <div class="button start">START</div>
-	  <div class="button reset">RESET</div>
+	  <div class="button start"><div>START</div></div>
+	  <div class="button reset"><div>RESET</div></div>
     <div class="spacer"></div>
 	</div>
 
